--- a/index.html
+++ b/index.html
@@ -422,6 +422,14 @@
 													>Gulp</a
 												>
 											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="JS__HW__13/"
+													target="_blank"
+													>Homework_js_13</a
+												>
+											</li>
 										</ul>
 									</nav>
 								</div>
