--- a/JS__HW__13/index.html
+++ b/JS__HW__13/index.html
@@ -111,7 +111,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="modal third" id="third">
+			<section class="modal third none" id="third">
 				<div class="modal__container">
 					<div class="modal__wrapper">
 						<h2 class="modal__title">Друге завдання</h2>
