--- a/index.html
+++ b/index.html
@@ -430,6 +430,14 @@
 													>Homework_js_13</a
 												>
 											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="JS__HW__14/"
+													target="_blank"
+													>Homework_js_14</a
+												>
+											</li>
 										</ul>
 									</nav>
 								</div>
