--- a/JS__HW__14/index.html
+++ b/JS__HW__14/index.html
@@ -93,7 +93,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="modal second" id="second">
+			<section class="modal second none" id="second">
 				<div class="modal__container">
 					<div class="modal__wrapper">
 						<h2 class="modal__title">Друге завдання</h2>
