--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		<main class="main">
 			<div class="main__container">
 				<div class="main__wrapper">
-					<div class="main__content content">
+					<div class="main__content content none">
 						<div class="content__wrapper">
 							<div class="content__container">
 								<h3 class="content__title">
@@ -461,6 +461,14 @@
 													href="Monticello__Project__2/"
 													target="_blank"
 													>Monticello</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="https://sukhykh.github.io/marvel-project/"
+													target="_blank"
+													>Marvel</a
 												>
 											</li>
 										</ul>
